test/parser/char_literal/malformed_error2.myte
module test

val x = 'aa